deployment/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: git-buddy
  labels:
    name: git-buddy
