deployment/k8s/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: git-buddy
spec:
  selector:
    app: git-buddy-postgres
  ports:
    - port: 5432
      targetPort: 5432
  type: ClusterIP
