deployment/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: git-buddy-ingress
  namespace: git-buddy
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "86400"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "86400"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/websocket-services: "git-buddy-api"
spec:
  tls:
    - hosts:
        - git.fusebox.energy
      secretName: git-buddy-tls
  rules:
    - host: git.fusebox.energy
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: git-buddy-api
                port:
                  number: 80
          - path: /hubs
            pathType: Prefix
            backend:
              service:
                name: git-buddy-api
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: git-buddy-frontend
                port:
                  number: 80
